load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

cc_library(
    name = "OPRF",
    hdrs = [
        "oprf.h",
    ],
    srcs = [
        "oprf.cc",
    ],
    deps = [
        "@libsodium//:libsodium",
    ],
    visibility = ["//visibility:public"],
)

cc_test(
    name = "oprf-test",
    srcs = [
        "oprf_unittest.cc",
    ],
    deps = [
        ":OPRF",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@libsodium//:libsodium",
    ],
)
